tests/prsl/fixtures/invalid/missing-end-record.prsl
begin-record
record missing-end {
  content : "no end-record here";
}
